Fix font sizes and overlapping texts

--- a/styles.css
+++ b/styles.css
@@ -347,7 +347,7 @@ h1 {
   color: #556e9b;
 }
 
-.lc {
+.main-section .lc {
   margin-top: 1rem;
   width: 200px;
   height: 24px;
